--- a/src/app/posts/new/page.module.scss
+++ b/src/app/posts/new/page.module.scss
@@ -1,7 +1,5 @@
 .section {
   margin: {
     top: var(--size-4);
-    right: var(--default-spacing);
-    left: var(--default-spacing);
   }
 }
