--- a/src/components/home-page/latest-posts.module.scss
+++ b/src/components/home-page/latest-posts.module.scss
@@ -1,5 +1,5 @@
 .latest {
-  margin: var(--size-8) var(--default-spacing);
+  margin: var(--size-8) 0;
 }
 
 .latest h2 {
