--- a/src/components/home-page/summary.module.scss
+++ b/src/components/home-page/summary.module.scss
@@ -1,5 +1,5 @@
 .summary {
-  margin: var(--size-8) var(--default-spacing);
+  margin: var(--size-8) 0;
 
   text-align: justify;
   h2 {
