--- a/src/components/posts/all-posts.module.scss
+++ b/src/components/posts/all-posts.module.scss
@@ -1,5 +1,5 @@
 .posts {
-  margin: var(--size-8) var(--default-spacing);
+  margin: var(--size-8) 0;
   h2 {
     text-align: center;
   }
